@@ -53,6 +53,11 @@ Release date: TBA
 
   Closes #5486
 
+* Reinstated checks from the python3 checker that are still useful for python 3
+  (``eq-without-hash``)
+
+  Closes #5025
+
 * Added several checkers to deal with unicode security issues
   (see `Trojan Sources <https://trojansource.codes/>`_ and
   `PEP 672 <https://www.python.org/dev/peps/pep-0672/>`_ for details) that also
